--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,12 @@
 {
-  "name"       : "tonila/cosmosdb",
+  "name"       : "jupitern/cosmosdb",
   "description": "PHP wrapper for Azure Cosmos DB (formerly known as azure documentdb) using SQL rest api",
   "keywords"   : ["azure cosmosdb", "cosmosdb", "azure documentdb", "documentdb", "cosmosdb rest", "cosmosdb sql api rest"],
-  "homepage"   : "https://github.com/tonila/cosmosdb",
+  "homepage"   : "https://github.com/jupitern/cosmosdb",
   "license"    : "MIT",
-  "authors"    : [
-    {
-      "name"    : "Nuno Chaves",
-      "email"   : "nunochaves@sapo.pt",
-      "role"    : "Developer"
-    },
-    {
-
-    }
-  ],
   "support": {
-    "source": "https://github.com/tonila/cosmosdb",
-    "issues": "https://github.com/tonila/cosmosdb/issues"
+    "source": "https://github.com/jupitern/cosmosdb",
+    "issues": "https://github.com/jupitern/cosmosdb/issues"
   },
   "require"    :{
     "php":">=7.0",
@@ -25,11 +15,6 @@
   "autoload": {
     "psr-4": {
       "Jupitern\\CosmosDb\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-
     }
   }
 }
